--- a/marketing-analytics.qmd
+++ b/marketing-analytics.qmd
@@ -8,15 +8,13 @@ listing:
     - "index desc"
 ---
 
-Below are selected projects that highlight my experience applying marketing analytics to real-world challenges. These projects reflect my ability to combine statistical tools, campaign data, and strategic thinking to inform decisions and drive results.
+Shiny is a powerful R package that makes it easy to build interactive web applications directly from R. Shiny allows data analysts and scientists to create responsive web applications without requiring expertise in web development technologies like HTML, CSS, or JavaScript. 
 
 Whether developing dashboards, analyzing campaign performance, or uncovering insights through SEO and web analytics, each project is rooted in turning complex marketing data into clear, actionable strategies.
 
 ## What You’ll Find
 
-- **Campaign Performance Analysis:** Evaluating the effectiveness of digital marketing efforts using data.
-- **Data Visualization:** Turning raw datasets into intuitive dashboards and reports.
-- **Marketing Mix & Attribution:** Exploring how different channels contribute to success.
+- **User Interface (UI)** The UI defines the layout and appearance of your application. It controls what users see and how they interact with your application. In Shiny, the UI is typically created using a variety of layout functions and input widgets.
+- **Data Visualization:** Marketing teams need to constantly monitor and analyze campaign performance. A Shiny dashboard can pull data from various sources (Google Analytics, social media platforms, email marketing tools) and provide a unified view of performance metrics.
 - **Customer & Market Insights:** Using analytics to better understand user behavior and optimize experiences.
-
 ---
