--- a/strategic-marketing.qmd
+++ b/strategic-marketing.qmd
@@ -2,59 +2,55 @@
 title: "Strategic Marketing"
 ---
 
-Below are selected projects that showcase my work in strategic marketing, campaign development, and brand management. These examples highlight how I apply leadership, data-informed decision making, and creative direction to drive marketing success.
+Below are selected projects that showcase my work in digital marketing, campaign execution, and brand strategy. These examples highlight how I apply analytics, cross-functional collaboration, and innovative thinking to drive measurable outcomes.
 
-## [Project Title 1: Strategic Campaign Planning]
+## SEMA+ Launch & Engagement Campaign
 
-In this project, I led the development of a comprehensive marketing campaign for **[product, service, or initiative]**. From audience segmentation to messaging strategy, I managed the full lifecycle of the campaign, aligning it with business objectives and measurable KPIs.
+As a key contributor to the launch of **SEMA+**, a B2C membership program at the Specialty Equipment Market Association, I helped build the campaign strategy, member communications, and partner engagement efforts.
 
 **Skills Demonstrated:**
 
-- **Marketing Strategy:** Defined objectives and tactics for maximum impact.
-- **Team Coordination:** Oversaw collaboration across creative, data, and channel teams.
-- **Performance Tracking:** Implemented real-time metrics and post-campaign analysis.
-- **Brand Positioning:** Ensured consistency across all touchpoints.
+- **Digital Campaign Strategy:** Supported campaign planning, messaging, and rollout across platforms.
+- **Cross-Functional Collaboration:** Coordinated efforts with IT, accounting, and marketing teams.
+- **CRM Integration & Analytics:** Streamlined member data flows and tracked campaign engagement.
+- **Value Proposition Development:** Collaborated on partner outreach to expand member perks.
 
 ---
 
-## [Project Title 2: Brand Audit & Positioning]
+## Instagram Strategy & Leasing Funnel Optimization
 
-This initiative involved conducting a full brand audit for **[organization or brand]**, evaluating its current market perception, competitive landscape, and customer engagement. I synthesized insights into a refreshed brand strategy and visual identity recommendations.
+At **The Current / Asset Living**, I led social media efforts and on-campus outreach during a critical leasing period. My initiatives helped the property reach **100% occupancy two months ahead of schedule**.
 
 **Skills Demonstrated:**
 
-- **Brand Analysis:** Audited messaging, tone, and visual identity.
-- **Competitive Benchmarking:** Evaluated brand positioning within the market.
-- **Strategic Communication:** Developed new value propositions and storytelling elements.
-- **Stakeholder Presentation:** Delivered recommendations to senior leadership.
+- **Content Scheduling & Analytics:** Used performance data to optimize social media engagement.
+- **Campaign Execution:** Developed a targeted outreach plan across digital and physical channels.
+- **Leasing Funnel Management:** Oversaw lead generation through final lease-up.
+- **Brand Voice:** Maintained a consistent, appealing tone across communications.
 
 ---
 
-## [Project Title 3: Product Launch Go-to-Market Plan]
+## Internal Rosetta Stone Campaign – Panda Restaurant Group
 
-For the release of **[new product/service]**, I created a go-to-market (GTM) strategy from scratch. This included customer journey mapping, channel mix planning, and launch timeline coordination.
+To boost language learning tool adoption, I designed and executed an internal marketing initiative promoting **Rosetta Stone licenses** to all Panda Restaurant Group associates.
 
 **Skills Demonstrated:**
 
-- **Go-to-Market Strategy:** Developed a clear launch roadmap aligned with buyer needs.
-- **Integrated Marketing:** Orchestrated email, paid ads, social, and on-site promotions.
-- **Budget Management:** Allocated resources efficiently across tactics.
-- **Launch Optimization:** Tracked performance and refined tactics in real time.
-
-Below is an embedded demonstration of the interactive report:
-
-
-<iframe src="data/TRI SEO Comparison.html" width="100%" height="600px" style="border: none;"></iframe>
+- **Email Marketing Strategy:** Wrote and deployed campaign emails that resulted in full license adoption.
+- **User Engagement Tactics:** Created demand that led to a waitlist of 30+ employees.
+- **LMS Operations Support:** Ensured compliance and content accessibility across training materials.
+- **Early-Shift Tech Support:** Delivered weekend technical support using ServiceNow.
 
 ---
 
-## [Project Title 4: Client Consulting & Campaign Optimization]
+## Operations & Training Content Development – Chick-fil-A
 
-I collaborated with a client to assess and optimize their existing marketing efforts. Through audits, persona development, and campaign refinement, I helped improve ROI and audience engagement.
+As a **Shift Leader**, I created and led training efforts focused on operational consistency, financial accountability, and employee readiness.
 
 **Skills Demonstrated:**
 
-- **Client Consulting:** Provided clear insights and strategic guidance.
-- **Persona Development:** Built target personas to guide messaging.
-- **Campaign Optimization:** Identified and addressed areas of underperformance.
-- **Data-Driven Adjustments:** Leveraged analytics to refine tactics.
+- **Training Content Design:** Developed SOPs for opening, midday, and closing procedures.
+- **Cash Handling Training:** Trained employees to reduce errors and increase accountability.
+- **Operational Oversight:** Ensured nightly closeout and safety through standardized walkthroughs.
+- **Team Leadership:** Mentored and coached new employees on best practices.
+---
