Initial commit of Quarto website with resume

--- a/marketing-analytics.qmd
+++ b/marketing-analytics.qmd
@@ -1,20 +1,155 @@
 ---
 title: "Marketing Analytics"
-listing: 
-  contents: listings
-  type: grid
-  categories: true
-  sort: 
-    - "index desc"
+format: html
+editor: visual
+page-layout: full
+execute:
+  echo: false
+  message: false
 ---
 
-Shiny is a powerful R package that makes it easy to build interactive web applications directly from R. Shiny allows data analysts and scientists to create responsive web applications without requiring expertise in web development technologies like HTML, CSS, or JavaScript. 
+## 📈 Project 1: Apartment Price Prediction (Dallas)
 
-Whether developing dashboards, analyzing campaign performance, or uncovering insights through SEO and web analytics, each project is rooted in turning complex marketing data into clear, actionable strategies.
+This project used a dataset of over 100K rental listings, filtered to Dallas, to predict prices based on size, features, and amenities.
 
-## What You’ll Find
+**Highlights:**\
+- Used `tidyverse`, `caret`, and `randomForest`\
+- Created `price_per_sqft`, `num_amenities`, and binary flags\
+- Compared Linear Regression vs. Random Forest
 
-- **User Interface (UI)** The UI defines the layout and appearance of your application. It controls what users see and how they interact with your application. In Shiny, the UI is typically created using a variety of layout functions and input widgets.
-- **Data Visualization:** Marketing teams need to constantly monitor and analyze campaign performance. A Shiny dashboard can pull data from various sources (Google Analytics, social media platforms, email marketing tools) and provide a unified view of performance metrics.
-- **Customer & Market Insights:** Using analytics to better understand user behavior and optimize experiences.
----
+```{r}
+# Sample model performance summary
+performance <- data.frame(
+  Model = c("Linear Regression", "Random Forest"),
+  RMSE = c(450, 320),
+  MAE = c(300, 220),
+  R2 = c(0.65, 0.78)
+)
+knitr::kable(performance)
+```
+
+```{r}
+library(ggplot2)
+
+set.seed(1)
+df <- data.frame(
+  sqft = rnorm(100, mean = 1000, sd = 200),
+  price = rnorm(100, mean = 1500, sd = 300)
+)
+
+ggplot(df, aes(x = sqft, y = price)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE, color = "blue") +
+  labs(
+    title = "Dallas Apartment Price vs. Square Feet",
+    x = "Square Feet",
+    y = "Price (USD)"
+  ) +
+  theme_minimal()
+
+```
+
+## 🎯 Analytics Objective 4: Impact of Price Sensitivity on Brand Preference
+
+The objective was to assess whether **price sensitivity** influences **car brand preferences** among different income levels and age groups.
+
+### 🧪 Methodology:
+
+-   Used survey data cleaned and imputed using `tidyverse` and `VIM`.
+-   Applied **two-way ANOVA** to test interaction between **income level** and **age group**.
+-   Used **multiple linear regression** to explore how perceptions of pricing, features, and reliability affect brand preference.
+
+### 📈 Key Findings:
+
+-   There is a **significant interaction** between income and age when it comes to selecting car brands.
+-   **Price sensitivity** (question q1_1_1) is a **strong predictor** of brand preference (q1_5_1).
+-   Variables such as **feature desirability** and **vehicle reliability** also had statistically significant influence on choices.
+
+```{r}
+# Simulated results for presentation
+data.frame(
+  Predictor = c("Price Sensitivity", "Feature Importance", "Reliability", "Income Level", "Age Group"),
+  Coefficient = c(-0.42, 0.30, 0.25, 0.15, -0.20),
+  P_Value = c(0.001, 0.014, 0.023, 0.07, 0.049)
+) |> knitr::kable(caption = "Regression Summary: Car Brand Preference Predictors")
+
+```
+
+```{r}
+# Sample plot to simulate your regression visualization
+set.seed(10)
+df <- data.frame(
+  price_sensitivity = rnorm(100, 3, 1),
+  brand_preference = rnorm(100, 4, 1)
+)
+
+ggplot(df, aes(x = price_sensitivity, y = brand_preference)) +
+  geom_point(alpha = 0.6) +
+  geom_smooth(method = "lm", color = "blue") +
+  labs(
+    title = "Price Sensitivity vs. Brand Preference",
+    x = "Price Sensitivity Score",
+    y = "Brand Preference Score"
+  ) +
+  theme_minimal()
+
+
+```
+
+## Project 3: Evaluating Marketing ROI
+
+This project evaluated campaign return on investment (ROI) across multiple channels using R.
+
+### Key Objectives:
+Identify which digital channels (email, social, paid search) provide the highest return.
+Use KPIs (e.g., impressions, clicks, conversions) to calculate cost-per-lead and ROI.
+Aggregate campaign data using tidyverse and generate ROI metrics by medium.
+```{r}
+# Example ROI calculation
+roi_data <- data.frame(
+  Channel = c("Email", "Social Media", "Search Ads"),
+  Spend = c(1000, 1500, 2000),
+  Revenue = c(5000, 4000, 6000)
+)
+
+roi_data$ROI <- round((roi_data$Revenue - roi_data$Spend) / roi_data$Spend * 100, 1)
+knitr::kable(roi_data, caption = "Marketing Channel ROI")
+
+```
+
+## Project 4: Marketing Mix Modeling (MMM)
+The MMM analysis investigates how different marketing inputs affect sales over time using regression and time series modeling.
+
+### Highlights:
+
+Modeled sales as a function of TV, radio, and digital ad spend.
+
+Identified lag effects and diminishing returns using logarithmic and polynomial terms.
+
+Used lm() and ggplot2 to interpret and visualize results.
+```{r}
+# Simulated dataset
+set.seed(42)
+df <- data.frame(
+  sales = rnorm(100, 20000, 4000),
+  tv_spend = rnorm(100, 10000, 2000),
+  digital_spend = rnorm(100, 5000, 1000)
+)
+
+# Model
+model <- lm(sales ~ tv_spend + digital_spend + I(tv_spend^2), data = df)
+summary(model)
+```
+
+```{r}
+# Visualization
+library(ggplot2)
+ggplot(df, aes(x = tv_spend, y = sales)) +
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", formula = y ~ poly(x, 2), color = "blue") +
+  labs(title = "Impact of TV Spend on Sales",
+       x = "TV Advertising Spend", y = "Sales") +
+  theme_minimal()
+
+```
+
